--- a/css/beyond.css
+++ b/css/beyond.css
@@ -97,7 +97,7 @@ p span {
 
 @media (max-width:992px) {
     .central-box {
-        max-width: 75%;
+        max-width: 90%;
     }
 }
 
@@ -210,6 +210,13 @@ h3 span {
     margin-bottom: 10px;
     padding-left: 20%;
     padding-right: 20%;
+}
+
+@media (max-width:992px) {
+    .page-title {
+       padding-left: 10%;
+       padding-right: 10%;
+    }
 }
 
 .page-title span {
@@ -549,4 +556,24 @@ div.list-box ul li a:hover {
 
 .scroll-up-btn:hover {
     filter: brightness(90%);
+}
+
+/*vid embed*/
+.video-con {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; 
+    height: 0; 
+    overflow: hidden;
+    margin: 2%;
+}
+
+.video-con iframe,
+.video-con object,
+.video-con embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
